Wed Jan 29 10:21:03 2003  George Lebl <jirka@5z.com>

	* POTFILES.in, cs.po: update

1999-09-04  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated translation.

1999-09-02  Zbigniew Chyla  <chyla@alice.ci.pwr.wroc.pl>

	* pl.po: Added translation.

1999-07-18  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated translation.

1999-08-01 Matthias Warkus <mawa@iname.com>

    * de.po: Did translation.

1999-07-18  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated translation.

1999-07-10  Tomas Ogren  <stric@ing.umu.se>

	* sv.po: Updated

1999-06-25  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated translation.
	
1999-06-10  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated translation.
	
1999-06-05  Tomas Ogren  <stric@ing.umu.se>

	* sv.po: New file

1999-05-06  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.

1999-05-03  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated translation.
