@@ -1,5 +1,14 @@
-Makefile
-Makefile.in
-Makefile.in.in
 POTFILES
+Makefile.in.in
+Makefile.in
+Makefile
 *.gmo
+*.mo
+*.pot
+messages
+missing
+cat-id-tbl.c
+stamp-cat-id
+po2tbl.sed
+po2tbl.sed.in
+.intltool-merge-cache
