@@ -1,12 +1,15 @@
-src/gnome-genius.c
-src/eval.c
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically.
 src/calc.c
-src/util.c
-src/mpwrap.c
-src/genius.c
-src/matop.c
 src/compil.c
+src/eval.c
 src/funclib.c
-src/gnome-genius.desktop.in.h
+src/genius.c
+src/gnome-genius.c
+src/gnome-genius.desktop.in
+src/graphing.c
+src/matop.c
+src/mpwrap.c
 src/plugin.c
 src/testplugin.c
+src/util.c
