@@ -1,3 +1,9 @@
+2003-05-29  Christian Rose  <menthos@menthos.com>
+
+	* POTFILES.in: Fixed invalidness by removing .h suffix, added
+	missing files, sorted.
+	* .cvsignore: Added more entries.
+
 Wed Jan 29 10:21:03 2003  George Lebl <jirka@5z.com>
 
 	* POTFILES.in, cs.po: update
